History button text

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
       </div>
       <div class="row">
         <span class="left">
-          <button class="control" id="start"> << </button>
-          <button class="control" id="prev"> < </button>
+          <button class="control" id="start"> << Reset </button>
+          <button class="control" id="prev"> < Back </button>
         </span>
         <span class="center">
           <label class="tooltip">
@@ -63,8 +63,8 @@
           <input id="social-distance" value="1">
         </span>
         <span class="right">
-          <button class="control" id="next"> > </button>
-          <button class="control" id="end"> >> </button>
+          <button class="control" id="next"> Forward > </button>
+          <button class="control" id="end"> End >> </button>
         </span>
       </div>
     </div>
