Change project name

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Disease</title>
+    <title>Social Distance Simulator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
