--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <span>
             <label class="tooltip" style="border-bottom: 1px dotted black">
               <a class="unstyled" target="_blank" href="https://en.wikipedia.org/wiki/Basic_reproduction_number">R<sub>0</sub></a>:
-              <span class="tooltiptext below">Basic reproduction number</span>
+              <span class="tooltiptext below"><a target="_blank" href="https://en.wikipedia.org/wiki/Basic_reproduction_number">Basic reproduction number</a></span>
             </label>
             <input id="rate" value="4">
           </span>
@@ -51,7 +51,7 @@
       </div>
       <div class="row">
         <span class="left">
-          <button class="control" id="start"> << Reset </button>
+          <button class="control" id="start"> << Beginning </button>
           <button class="control tooltip" id="prev"> 
             < Back
             <span class="tooltiptext above">Go back and change history. Double-click on chart to set time.</span>
@@ -67,7 +67,7 @@
         </span>
         <span class="right">
           <button class="control" id="next"> Forward > </button>
-          <button class="control" id="end"> End >> </button>
+          <button class="control" id="end"> Run to end >> </button>
         </span>
       </div>
     </div>
