--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,34 @@
             <input id="recovery" value="4">
           </span>
         </span>
+        <span class="right">
+          <a id="info-link" href="../README.md">INFO</a>
+          <dialog id="info-dialog" class="modal">
+            <div id="info-dialog-content" class="modal-content">
 
+            </div>
+          </dialog>
+          <script>
+            let xhr = new XMLHttpRequest();
+            xhr.open('GET', document.getElementById("info-link").href)
+            xhr.onreadystatechange = function() {
+              console.log(xhr);
+              document.getElementById("info-dialog-content").innerHTML = xhr.responseText;
+            };
+            xhr.send();
+            document.getElementById("info-link").addEventListener("click", function(event) {
+                event.preventDefault();
+                event.stopPropagation();
+                let dialog = document.getElementById("info-dialog")
+                dialog.open = true;
+              }
+            );
+            document.addEventListener("click", function(event) {
+                document.getElementById("info-dialog").open = false;
+              }
+            );
+          </script>
+        </span>
       </div>
 
       <div class="chart-row">
