--- a/__/README.html
+++ b/__/README.html
@@ -1,5 +1,5 @@
 <h1 id="disease-simulator">Disease simulator</h1><p>Try changing social distance during the course of a disease by using history navigation and observe the effects on the total infected, peak infected, and length of disease existence.</p><h2 id="assumptions-and-simplifications">Assumptions and simplifications</h2><ul>
-<li>Each infected person transmits to exactly R<sub>0</sub> others over the course of their sickness in the absense of social distance.</li>
+<li>Each infected person transmits to exactly R<sub>0</sub> others over the course of their sickness in the absence of social distance.</li>
 <li>Every infected person takes the same amount of time to recover and become non-contagious.</li>
 <li>Each infected person can transmit to any other person. Not realistic because people only infect those who are near them. However, it is made more realistic by travel.</li>
 <li>Every person socially behaves the same way.</li>
